force-app/main/default/objects/TPM_Push_Promotion_Overlap_Check__mdt/TPM_Push_Promotion_Overlap_Check__mdt.object-meta.xml
<CustomObject>
    <label>TPM Push Promotion Overlap Check</label>
    <pluralLabel>TPM Push Promotion Overlap Check</pluralLabel>
</CustomObject>