force-app/main/default/objects/TPM_Push_Promotion_Overlap_Check__mdt/fields/TPM_Child_Promotion__c.field-meta.xml
<CustomField>
    <fullName>TPM_Child_Promotion__c</fullName>
    <label>Child Promotion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>