force-app/main/default/objects/TPM_Push_Promotion_Overlap_Check__mdt/fields/TPM_Promotion_Template_For_OverLap_Check__c.field-meta.xml
<CustomField>
    <fullName>TPM_Promotion_Template_For_OverLap_Check__c</fullName>
    <label>Promotion Templates For OverLap Checks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>